--- a/socrates-admin/Shared/MainLayout.razor
+++ b/socrates-admin/Shared/MainLayout.razor
@@ -93,9 +93,9 @@
                 },
                  new MenuDataItem
                 {
-                    Path = "/resource",
+                    Path = "/resources",
                     Name = "资源管理",
-                    Key = "resource",
+                    Key = "resources",
                     Icon = "folder-open"
                 },
                  new MenuDataItem
