--- a/socrates-admin/Pages/Login.razor
+++ b/socrates-admin/Pages/Login.razor
@@ -34,13 +34,15 @@
                             </div>
                         </SpaceItem>
                     </Space>
-                    <Divider>其它登录方式</Divider>
-                    <Space Style="display:flex;justify-content:center;">
-                        <SpaceItem>
-                            <Icon Type="wechat" Theme="outline"   Height="2em" Width="2em" />
+                    <Space>
+                        <SpaceItem Style="display:flex;justify-content:left;">
+                            <Space>其它登录方式</Space>
                         </SpaceItem>
-                        <SpaceItem>
-                            <Icon Type="github" Theme="outline"  Height="2em" Width="2em" />
+                        <SpaceItem Style="display:flex;justify-content:center;">
+                            <Icon Type="wechat" Theme="outline" Height="2em" Width="2em" />
+                        </SpaceItem>
+                        <SpaceItem Style="display:flex;justify-content:center;">
+                            <Icon Type="github" Theme="outline" Height="2em" Width="2em" />
                         </SpaceItem>
                     </Space>
                 </Form>
