--- a/socrates-admin/Shared/RightLayout.razor
+++ b/socrates-admin/Shared/RightLayout.razor
@@ -3,21 +3,8 @@
 <Dropdown>
     <Overlay>
         <Menu>
-            <MenuItem>
-                <a target="_blank" rel="noopener noreferrer" href="http://www.alipay.com/">
-                    1st menu item
-                </a>
-            </MenuItem>
-            <MenuItem>
-                <a target="_blank" rel="noopener noreferrer" href="http://www.taobao.com/">
-                    2nd menu item
-                </a>
-            </MenuItem>
-            <MenuItem>
-                <a target="_blank" rel="noopener noreferrer" href="http://www.tmall.com/">
-                    3rd menu item
-                </a>
-            </MenuItem>
+            <MenuItem><Icon Type="user" Theme="outline" /><span>个人中心</span></MenuItem>
+            <MenuItem><Icon Type="logout" Theme="outline" /><span>退出</span></MenuItem>
         </Menu>
     </Overlay>
     <ChildContent>
