feature: 用户登录/登出 优化

--- a/socrates-admin/Pages/Resource.razor
+++ b/socrates-admin/Pages/Resource.razor
@@ -149,7 +149,7 @@
         {
             await _resourceService.Update(_resource.Adapt<UpdateResourceDto>());
         }
-        _navigationManager.NavigateTo("/resources", false);
+        _navigationManager.NavigateTo("/resources");
     }
 
 
