--- a/socrates-admin/Shared/MainLayout.razor
+++ b/socrates-admin/Shared/MainLayout.razor
@@ -6,6 +6,7 @@
                                  ContentWidth="Fluid"
                                  Layout="AntDesign.ProLayout.Layout.Side"
                                  PrimaryColor="daybreak"
+                                 Title="Socrates Admin"
                                  FixedHeader="true"
                                  MenuHeaderRender="true" HeaderHeight="48" MenuRender="true" SplitMenus="false" Class="custom-container">
     <RightContentRender>
