--- a/socrates-admin/Pages/GithubRedirect.razor
+++ b/socrates-admin/Pages/GithubRedirect.razor
@@ -5,12 +5,8 @@
 
 <PageTitle>Index</PageTitle>
 
-<div>
+<div style="position: fixed; right: 50%; top: 50%;">
     <Spin size="large" />
-    @if (!string.IsNullOrWhiteSpace(_code))
-    {
-        <h1> @_code </h1>
-    }
 </div>
 
 @code {
