--- a/socrates-admin/Shared/MainLayout.razor
+++ b/socrates-admin/Shared/MainLayout.razor
@@ -110,9 +110,9 @@
                 },
                  new MenuDataItem
                 {
-                    Path = "/policy",
+                    Path = "/policies",
                     Name = "权限策略",
-                    Key = "policy"
+                    Key = "policies"
                 },
           }
         },
